# nesy-veri

./: .gitignore  README.md  pyproject.toml
dfki/: data.py  data_v2.py  network_definitions.py  network_training.py  network_training_classification.py  network_verification.py
dfki/nesy/: nesy_data.py  nesy_inference.py
dfki/saved_models/2025-06-17_14:32:44/: model.py  results_per_split.json
dfki/saved_models/2025-06-22_10:59:24/: results_per_split.json
nesy_veri/: custom_ops.py  custom_softmax.py  neural_utils.py  utils.py
nesy_veri/examples/BDD_OIA/: bdd_oia_utils.py  network_training.py
nesy_veri/examples/ROAD_R/: network_training.py  road_utils.py  verification.py
nesy_veri/examples/minimal/: minimal_example.py
nesy_veri/examples/mnist_addition/: mnist_net_utils.py  mnist_utils.py  network_training.py  verification.py
nesy_veri/examples/mnist_addition/checkpoints/: trained_model.pth
nesy_veri/examples/mnist_addition/comparisons/: gurobi_comparison.py  marabou_cnn_robustness.py  result_plotting.py
nesy_veri/examples/mnist_addition/gurobi_comparison/: gurobi_actual_robustness_both.py  gurobi_correct_sum_comparison.py  gurobi_full_comparison.py  gurobi_robustness_comparison.py  gurobi_timing_comparison.py
nesy_veri/examples/mnist_addition/marabou/: README.md  cnn_robustness.py  marabou_verification.py
nesy_veri/examples/mnist_addition/results/: correctly_classified_imgs.csv  correctly_classified_imgs_4_digits_softmax.csv  correctly_classified_imgs_softmax.csv
results/: marabou_mnist.json
(+383 files in other folders)
