[tool.poetry]
name = "nesy-veri"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
auto-lirpa = {git = "https://github.com/Verified-Intelligence/auto_LiRPA"}
setuptools = "^75.3.0"
nnf = "^0.4.1"
gurobipy = "^11.0.3"
onnx = "^1.17.0"
onnxscript = "^0.1.0.dev20241101"
packaging = "^24.1"
pysdd = "^1.0.0"
graphviz = "^0.20.3"
black = "^24.10.0"
deepproblog = "^2.0.6"
rich = "^13.9.4"
torchmetrics = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
