[tool.poetry]
name = "dfki"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.5.1"
pandas = "^2.2.3"
black = "^24.10.0"
torchvision = "^0.20.1"
matplotlib = "^3.9.2"
rich = "^13.9.4"
torchmetrics = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
